--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             ><span class="span-logo">Studio</span></a
           >
 
-          <ul class="menu list">
+          <ul class="menu-list">
+            <!--menu list-->
             <li class="menu-item">
               <a class="menu-link link current" href="./index.html">Studio</a>
             </li>
@@ -47,6 +48,11 @@
             </li>
           </ul>
         </nav>
+        <button class="mobile-open-btn">
+          <svg class="icon icon-heroicons-solid_menu" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
         <address class="contact_info">
           <ul class="list">
             <li>
@@ -64,16 +70,17 @@
 
     <main>
       <!-- hero перша секція section -->
-
+      <!-- 
       <section class="main_section">
         <div class="container">
           <h1 class="section_title">Effective Solutions for Your Business</h1>
           <button class="cta_button" type="button">Order Service</button>
         </div>
       </section>
+       -->
 
       <!-- our друга секція benefits -->
-
+      <!-- 
       <section class="second-section">
         <div class="container">
           <h2 class="visually-hidden">Our benefits</h2>
@@ -129,8 +136,10 @@
           </ul>
         </div>
       </section>
+    -->
 
       <!-- Our третя секція Team -->
+      <!-- 
       <section class="third fourth-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -306,9 +315,10 @@
           </ul>
         </div>
       </section>
+    -->
 
       <!-- Our четверта секція  Portfolio -->
-
+      <!-- 
       <section class="fourth-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
@@ -436,9 +446,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    --></main>
     <!-- footer -->
-
+    <!-- 
     <footer class="footer_section">
       <div class="container">
         <div class="footer-container">
@@ -505,7 +515,8 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+  -->
+    <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="button-exit" type="button">
           <svg class="icon-close-black" width="8" height="8">
@@ -586,6 +597,79 @@
           <button class="send">Send</button>
         </form>
       </div>
-    </div>
+    </div>-->
+    <!-mobile menu 
+    <div class="mobile-menu">
+      <div class="modal">
+        <button class="button-exit" type="button">
+          <svg class="icon-close-black" width="8" height="8">
+            <use href="./images/symbol-defs[1].svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="container-mobile">
+        <nav class="page-navigation">
+          <ul class="">
+            <li class="menu-item">
+              <a class="menu-link link current" href="./index.html">Studio</a>
+            </li>
+
+            <li class="menu-item">
+              <a class="menu-link link" href="">Portfolio</a>
+            </li>
+
+            <li class="menu-item">
+              <a class="menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="">
+          <address class="contact_info">
+            <ul class="">
+              <li>
+                <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              </li>
+              <li>
+                <a class="link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="">
+          <ul class="social-media-list-menu">
+            <li class="social-network-items">
+              <a class="traling-icons" href="">
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-items">
+              <a class="traling-icons" href="">
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-items">
+              <a class="traling-icons" href="">
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-items">
+              <a class="traling-icons" href="">
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>-->
   </body>
 </html>
