--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
           </ul>
         </nav>
-        <button class="mobile-open-btn">
+        <button class="mobile-open-btn" type="button" data-menu-open>
           <svg class="icon icon-heroicons-solid_menu" width="24" height="24">
             <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
           </svg>
@@ -70,24 +70,22 @@
 
     <main>
       <!-- hero перша секція section -->
-      <!-- 
+
       <section class="main_section">
         <div class="container">
           <h1 class="section_title">Effective Solutions for Your Business</h1>
           <button class="cta_button" type="button">Order Service</button>
         </div>
       </section>
-       -->
 
       <!-- our друга секція benefits -->
-      <!-- 
       <section class="second-section">
         <div class="container">
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
               <div class="icons">
-                <svg class="" width="64" height="64">
+                <svg class="antenna" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -99,7 +97,7 @@
             </li>
             <li class="benefits-item">
               <div class="icons">
-                <svg class="" width="64" height="64">
+                <svg class="clock" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -111,7 +109,7 @@
             </li>
             <li class="benefits-item">
               <div class="icons">
-                <svg class="" width="64" height="64">
+                <svg class="diagram" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -123,7 +121,7 @@
             </li>
             <li class="benefits-item">
               <div class="icons">
-                <svg class="" width="64" height="64">
+                <svg class="astronaut" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -136,16 +134,16 @@
           </ul>
         </div>
       </section>
-    -->
 
       <!-- Our третя секція Team -->
-      <!-- 
       <section class="third fourth-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
+                class="team-foto"
+                srcset="./images/img-1.jpg 1x, ./images/img-1min2x.jpg 2x"
                 src="./images/img-1.jpg"
                 alt="photo Mark Guerrero"
                 width="264"
@@ -156,28 +154,28 @@
                 <p class="team-item-text">Product Designer</p>
                 <ul class="social-media-list">
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://www.instagram.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://x.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://www.facebook.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://ua.linkedin.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -188,6 +186,8 @@
             </li>
             <li class="team-item">
               <img
+                class="team-foto"
+                srcset="./images/img-2.jpg 1x, ./images/img-2min2x.jpg 2x"
                 src="./images/img-2.jpg"
                 alt="photo Tom Ford"
                 width="264"
@@ -230,6 +230,8 @@
             </li>
             <li class="team-item">
               <img
+                class="team-foto"
+                srcset="./images/img-3.jpg 1x, ./images/img-3min2x.jpg 2x"
                 src="./images/img-3.jpg"
                 alt="photo Camila Garcia"
                 width="264"
@@ -272,6 +274,8 @@
             </li>
             <li class="team-item">
               <img
+                class="team-foto"
+                srcset="./images/img-4.jpg 1x, ./images/img-4min2x.jpg 2x"
                 src="./images/img-4.jpg"
                 alt="photo Daniel Wilson"
                 width="264"
@@ -282,28 +286,28 @@
                 <p class="team-item-text">UI Designer</p>
                 <ul class="social-media-list">
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://www.instagram.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://x.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://www.facebook.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network-item">
-                    <a class="traling-icon" href="">
+                    <a class="traling-icon" href="https://ua.linkedin.com/">
                       <svg class="ellipse" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -315,10 +319,9 @@
           </ul>
         </div>
       </section>
-    -->
 
       <!-- Our четверта секція  Portfolio -->
-      <!-- 
+
       <section class="fourth-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
@@ -446,24 +449,24 @@
           </ul>
         </div>
       </section>
-    --></main>
+    </main>
+
     <!-- footer -->
-    <!-- 
     <footer class="footer_section">
-      <div class="container">
-        <div class="footer-container">
-          <a class="logotype logotype-link" href="./index.html">
+      <div class="container footer-container">
+        <div class="container-content">
+          <a class="footer-portfolio-logo" href="./index.html">
             <i class="span-logo-web">Web</i
             ><span class="footer-span">Studio</span>
           </a>
-          <p class="footer_paragraph">
+          <p class="footer-portfolio-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="social-media-footer">
-          <p class="social-media-paragraph">Social media</p>
-          <ul class="social-media-list-footer">
+        <div class="footer-icons">
+          <p class="soc-media-text">Social media</p>
+          <ul class="footer-icons-list">
             <li class="social-network-item">
               <a class="traling-icon-footer" href="">
                 <svg class="ellipse" width="24" height="24">
@@ -515,8 +518,8 @@
         </div>
       </div>
     </footer>
-  -->
-    <!-- <div class="modal-overlay">
+
+    <div class="backdrop">
       <div class="modal">
         <button class="button-exit" type="button">
           <svg class="icon-close-black" width="8" height="8">
@@ -597,18 +600,18 @@
           <button class="send">Send</button>
         </form>
       </div>
-    </div>-->
-    <!-mobile menu 
-    <div class="mobile-menu">
-      <div class="modal">
-        <button class="button-exit" type="button">
+    </div>
+    <!--mobile menu-->
+    <div class="mobile-menu is-open" data-menu>
+      <div class="container container-mobile">
+        <button class="mobile-menu-close" data-menu-close>
           <svg class="icon-close-black" width="8" height="8">
             <use href="./images/symbol-defs[1].svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
-      <div class="container-mobile">
-        <nav class="page-navigation">
+      <div class="container container-mobile">
+        <nav class="mobile-menu-nav">
           <ul class="">
             <li class="menu-item">
               <a class="menu-link link current" href="./index.html">Studio</a>
@@ -670,6 +673,8 @@
           </ul>
         </div>
       </div>
-    </div>-->
+    </div>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
