--- a/index.html
+++ b/index.html
@@ -519,9 +519,9 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop" data-modal>
       <div class="modal">
-        <button class="button-exit" type="button">
+        <button class="button-exit" type="button" data-modal-close>
           <svg class="icon-close-black" width="8" height="8">
             <use href="./images/symbol-defs[1].svg#icon-close-black"></use>
           </svg>
