--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       </div>
     </div>
     <!--mobile menu-->
-    <div class="mobile-menu is-open" data-menu>
+    <div class="mobile-menu" data-menu>
       <div class="container container-mobile">
         <button class="mobile-menu-close" data-menu-close>
           <svg class="icon-close-black" width="8" height="8">
@@ -612,7 +612,7 @@
       </div>
       <div class="container container-mobile">
         <nav class="mobile-menu-nav">
-          <ul class="">
+          <ul class="mobile-menu-nav-list">
             <li class="menu-item">
               <a class="menu-link link current" href="./index.html">Studio</a>
             </li>
@@ -628,7 +628,7 @@
         </nav>
         <div class="">
           <address class="contact_info">
-            <ul class="">
+            <ul class="mobile-menu-contacts-list">
               <li>
                 <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
               </li>
