--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       </div>
     </div>
     <!--mobile menu-->
-    <div class="mobile-menu" data-menu>
+    <div class="mobile-menu is-open" data-menu>
       <div class="container container-mobile">
         <button class="mobile-menu-close" data-menu-close>
           <svg class="icon-close-black" width="8" height="8">
@@ -614,15 +614,15 @@
         <nav class="mobile-menu-nav">
           <ul class="mobile-menu-nav-list">
             <li class="menu-item">
-              <a class="menu-link link current" href="./index.html">Studio</a>
+              <a class="menu-link-m link current" href="./index.html">Studio</a>
             </li>
 
             <li class="menu-item">
-              <a class="menu-link link" href="">Portfolio</a>
+              <a class="menu-link-m link" href="">Portfolio</a>
             </li>
 
             <li class="menu-item">
-              <a class="menu-link link" href="">Contacts</a>
+              <a class="menu-link-m link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
