--- a/index.html
+++ b/index.html
@@ -328,13 +328,28 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  class="box-img"
-                  src="./images/app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/app.jpg. 1x, ./images/app2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/app.jpg. 1x, ./images/app2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/app.jpg. 1x, ./images/app2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="box-img"
+                    src="./images/app.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -348,12 +363,27 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  src="./images/qr.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/qr.jpg 1x, ./images/qr2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/qr.jpg 1x, ./images/qr2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/qr.jpg 1x, ./images/qr2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/qr.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -368,12 +398,27 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  src="./images/laptop.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/laptop.jpg 1x, ./images/laptop2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/laptop.jpg 1x, ./images/laptop2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/laptop.jpg 1x, ./images/laptop2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/laptop.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -388,12 +433,27 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  src="./images/car.jpg"
-                  alt="Taxi"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/car.jpg 1x, ./images/car2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/car.jpg 1x, ./images/car2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/car.jpg 1x, ./images/car2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/car.jpg"
+                    alt="Taxi"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -408,12 +468,27 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  src="./images/phone.jpg"
-                  alt="Screen"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/phone.jpg 1x, ./images/phone2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/phone.jpg 1x, ./images/phone2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/phone.jpg 1x, ./images/phone2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/phone.jpg"
+                    alt="Screen"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -428,12 +503,27 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <img
-                  src="./images/photo.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/photo.jpg 1x, ./images/photo2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/photo.jpg 1x, ./images/photo2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/photo.jpg 1x, ./images/photo2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/photo.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="box-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
